# scaffony

./: .gitignore  README.md  package-lock.json  package.json
src/: app.html
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: app_state.svelte.ts  log.ts  lucide.ts  metadata.ts  playback.ts  string.ts  user_data.svelte.ts
src/lib/components/atoms/: Button.svelte  IconButton.svelte  LucideIcon.svelte  MenuEntry.svelte  Modal.svelte  Tag.svelte
src/lib/components/molecules/: Header.svelte  Menu.svelte  Page.svelte  Player.svelte  header.svelte
src/lib/components/molecules/track_list/: Track.svelte  TrackList.svelte
src/lib/components/pages/: ClassifyPage.svelte  Libraries.svelte  LibraryPage.svelte  PlaylistsPage.svelte  TagPlaylistPage.svelte  TagsPage.svelte
src/routes/: +page.svelte
static/css/: global.css
static/css/fonts/: playwrite_de_grund.css  quicksand.css
