[package]
name = "scaffony"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scaffony_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# chrono = { version = "0.4.42" }
log = { version = "0.4.28"}
# log4rs = { version = "1.4.0"}
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2.2.6"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-persisted-scope = "2"
audiotags = {git = "https://github.com/picorims/audiotags", branch = "main" }

